# weekly-seo-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PROJECT_DOCUMENTATION.md  SOURCES_AND_INTEGRATIONS.md  WEEKLY_REPORT_SECTION_A_BASELINE_AND_GUARDRAILS.md  manager_document_agent_architecture_poc_2026-03-02.md  manager_document_agent_implementation_tasks.md  manager_document_agent_manager_survey.md  manager_document_agent_optional_formats_backlog.md  manager_document_agent_release_checklist.md  manager_document_agent_security_baseline.md  system_story_how_it_works_v2.md  weekly_report_rollout_j_changelog_2026-02-26.md
scripts/: eval_reports.py  export_langgraph_graph.py  run_report.sh  seo_outlook_2026_manager.py
tests/: test_additional_context_crux.py  test_allegro_trends_client.py  test_analysis.py  test_config.py  test_continuity_client.py  test_evaluation.py  test_external_signals.py  test_ferie.py  test_google_drive_client.py  test_main_manifest.py  test_main_quality_gate.py  test_merchant_center_client.py  test_people_manager_agent.py  test_people_team_agent.py  test_quality_guardrail_narrative.py  test_query_filter.py  test_report_structure_snapshots.py  test_reporting.py  test_reporting_compaction.py  test_senuto_client.py  test_seo_presentations_client.py  test_synthetic_source_fixtures.py  test_time_windows.py  test_weekly_reporting_google_drive_verification.py  test_workflow_daemon_tasks.py  test_workflow_final_report.py  test_workflow_formatting.py
weekly_seo_agent/: __init__.py  additional_context.py  analysis.py  config.py  ferie.py  (+12 more)
(+87 files in other folders)
